# rene

./: CMakeLists.txt  kokkos_mdspan.cmake
rene/: aligned_allocator.h  array_view.h  gnu_attributes.h  identity_number.h  mdarray.h  mdspan.h  scale.h  simd_align.h  simd_types.h  sparse_span.h  type_short_name.h
rene/blas/1/: axpy.h
rene/blas/2/: gemv.h
rene/op/: add.h  fill.h  scale.h
test/: CMakeLists.txt  test_add.cpp  test_array_view.cpp  test_axpy.cpp  test_fill.cpp  test_mdspan.cpp  test_scale.cpp  test_span.cpp  test_sparse_span.cpp
